Added search bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- github info -->
     <div class="github-info">
         <div class="basic-info">
-            <div class="nick"></div>
+            <input class="nick">
+            <a><img src="" alt=""></a>
         </div>
         <div class="advanced-info">
             <h3>Public repositories:</h3>
